<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="placeData"
            type="com.example.weatherapp.network.PlaceData" />
        <variable
            name="clickListener"
            type="com.example.weatherapp.citylist.PlaceDataListener" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@drawable/shape_outline_rect_rounded"
            android:layout_marginTop="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:onClick="@{() -> clickListener.onClick(placeData)}"
            android:clickable="true"
            android:focusable="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="@id/panel"
                app:layout_constraintBottom_toBottomOf="@id/panel"
                app:layout_constraintStart_toStartOf="@id/panel"
                app:layout_constraintEnd_toEndOf="@id/panel">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_item_junior_temp"
                            style="@style/coloredfont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{placeData.main.tempStr}"
                            android:textSize="36sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"

                            tools:text="19.6" />

                        <TextView
                            style="@style/coloredfont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6sp"
                            android:text="@string/temp_unit"
                            app:layout_constraintStart_toEndOf="@id/tv_item_junior_temp"
                            app:layout_constraintTop_toTopOf="@id/tv_item_junior_temp" />

                        <TextView
                            android:id="@+id/tv_item_junior_feelsLikePrefix"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" ~"
                            app:layout_constraintBottom_toBottomOf="@id/tv_item_junior_temp"
                            app:layout_constraintStart_toEndOf="@id/tv_item_junior_temp" />

                        <TextView
                            style="@style/coloredfont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{placeData.main.feelsLikeStr}"
                            app:layout_constraintBottom_toBottomOf="@id/tv_item_junior_temp"
                            app:layout_constraintStart_toEndOf="@id/tv_item_junior_feelsLikePrefix"
                            tools:text="19.0" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:id="@+id/hl_place_senior_tempminmax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:textSize="36sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/feels_like"
                        tools:text="( 19.1°C - 21.7°C )">

                        <TextView
                            style="@style/coloredfont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="( " />

                        <TextView
                            style="@style/coloredfont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{placeData.main.tempMinStr}"
                            tools:text="19.2" />

                        <TextView
                            style="@style/coloredfont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" - " />

                        <TextView
                            style="@style/coloredfont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{placeData.main.tempMaxStr}"
                            tools:text="20.1" />

                        <TextView
                            style="@style/coloredfont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" )" />
                    </LinearLayout>
                </LinearLayout>
                <TableLayout
                    android:id="@+id/weather_panel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <TableRow>

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            setSrcFromIcon="@{placeData.weather[0].icon}"
                            tools:src="@drawable/icon_cloudy"
                            app:tint="@color/main_color" />

                        <TextView
                            android:id="@+id/description"
                            style="@style/coloredfont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{placeData.weather[0].description}"
                            android:maxWidth="150dp"
                            tools:text="Zachmurzenie" />
                    </TableRow>
                    <TableRow>
                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:background="@drawable/icon_pressure"
                            android:backgroundTint="@color/main_color"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/pressure"
                                style="@style/coloredfont"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@{placeData.main.pressureStr}"
                                tools:text="1011" />

                            <TextView
                                style="@style/coloredfont"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/press_unit" />
                        </LinearLayout>

                    </TableRow>
                    <TableRow>
                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:background="@drawable/icon_humidity"
                            android:backgroundTint="@color/main_color"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/humidity"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                style="@style/coloredfont"
                                tools:text="86"
                                android:text="@{placeData.main.humidityStr}"/>
                            <TextView
                                style="@style/coloredfont"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/humid_unit"/>
                        </LinearLayout>

                    </TableRow>
                </TableLayout>
            </LinearLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/panel"
            app:layout_constraintBottom_toTopOf="@id/panel"
            app:layout_constraintStart_toStartOf="@id/panel"
            android:textSize="15sp"
            android:layout_marginStart="24dp"
            android:paddingLeft="3sp"
            android:paddingRight="3sp"
            android:text="@{placeData.cityName}"
            tools:text="Gliwice"
            style="@style/coloredfont"
            android:background="@color/background_color"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>